deploy: bf85e2265d8d9d869d7393a1eddf7ec68542cb8e

--- a/print.html
+++ b/print.html
@@ -621,7 +621,8 @@ kill @e[scores={faq.pass=1}]
 <h4 id="6-use-in-s---"><a class="header" href="#6-use-in-s---">6. Use in @s ( * )</a></h4>
 <pre><code class="language-mcfunction">execute as @e[tag=!global.ignore] run function dp:example/kill
 
-dp:example/kill -&gt; kill @s[tag=!global.ignore.kill]
+#&gt; dp:example/kill 
+kill @s[tag=!global.ignore.kill]
 </code></pre>
 <blockquote>
 <p>Some cases, you use global ignoring tags at entry selectors, it may cause the command to not work as you want. But then you find that using it in <code>@s</code> it works normally. ( ** )</p>
